--- a/projects.qmd
+++ b/projects.qmd
@@ -7,4 +7,4 @@ format: html
 
 LETS GO
 
-<iframe src="https://ncga24.streamlit.app" width="100%" height="800px" frameborder="0"></iframe>
+st.write("Check out my [Streamlit app](https://ncga24.streamlit.app)")
