--- a/projects.qmd
+++ b/projects.qmd
@@ -8,3 +8,9 @@ format: html
 LETS GO
 
 st.write("Check out my [Streamlit app](https://ncga24.streamlit.app)")
+
+<html>
+<body>
+  <iframe src="https://ncga24.streamlit.app" width="100%" height="800px" frameborder="0"></iframe>
+</body>
+</html>
